--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "babel-polyfill": "^6.3.14",
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-react": "^6.3.13",
+    "bootstrap": "^3.3.6",
     "bootstrap-toggle": "^2.2.1",
     "d3": "^3.5.14",
     "d3-cloud": "^1.2.1",
